# Liquidador-de-Nomina

./: .gitignore  Calculo_Salario.py  GUI.spec  LICENSE.txt  Liquidador-de-Nómina.xlsx  Liquidador-de-nomina.xlsx  Prueba_Salario.py  README.md  consola.py  kivi install  pyproject.toml  requirements.txt  test_salario.py
Calculos/: calculo_salario.py
Excepciones/: Exceptions.py
Liquidador_de_nomina/: Calculo_Salario.py  test_Salario.py
Pruebas/: test_salario.py
sql/: actualizar_tabla_prestamos.sql  borrar_empleados.sql  insertar_cargos.sql  insertar_tipo_de_horas_extra.sql  tabla _horas_extra.sql  tabla_cargos.sql  tabla_empleados.sql  tabla_historial_nomina.sql  tabla_historial_pagos_prestamo.sql  tabla_horas_extra.sql  tabla_prestamo.sql  tabla_tipo_hora_extra.sql
src/controller/: cargos_controller.py  empleado_controller.py  nomina_controller.py  tipo_hora_extra_controller.py
src/model/: calculo_nomina.py  calculo_salario.py  clase_empleado.py  excepciones.py  loan_service.py
src/view/GUI/: GUI.py  app.py  borrar_screen.py  calcular_screen.py  consultar_screen.py  main_screen.py  modificar_screen.py  registrar_screen.py
src/view/console/: GUI.py  main.py
test/: __init__.py  run_tests.py  test_nomina.py  test_nomina_DB.py  test_salario.py
